Removed all tabs in favour of 4-spaces